--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.6.1.post1" %}
+{% set version = "3.1.0" %}
 
 package:
   name: pyproj
@@ -6,16 +6,25 @@ package:
 
 source:
   url: https://pypi.io/packages/source/p/pyproj/pyproj-{{ version }}.tar.gz
-  sha256: 4f5b02b4abbd41610397c635b275a8ee4a2b5bc72a75572b98ac6ae7befa471e
+  sha256: 67b94f4e694ae33fc90dfb7da0e6b5ed5f671dd0acc2f6cf46e9c39d56e16e1a
+  patches:
+    - 0001-TST-Adjust-geometry_area_perimeter-docstring-test-se.patch
 
 build:
-  number: 1
-  skip: true  # [py<35]
+  number: 4
+  skip: true  # [py<37]
+  entry_points:
+    - pyproj=pyproj.__main__:main
   script:
+    - export "PROJ_VERSION={{ proj }}"  # [unix]
+    - set "PROJ_VERSION={{ proj }}"     # [win]
     - {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
   build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - {{ compiler('c') }}
   host:
     - python
@@ -25,6 +34,7 @@ requirements:
   run:
     - python
     - proj
+    - certifi
 
 test:
   source_files:
@@ -32,13 +42,14 @@ test:
   requires:
     - pytest
     - shapely
-    - mock
     - numpy
+    - pandas
+    - xarray
   imports:
     - pyproj
   commands:
+    - pyproj --verbose
     - pytest -v -s
-
 about:
   home: https://github.com/pyproj4/pyproj
   license: MIT
