--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,13 +22,14 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
     - {{ compiler('c') }}
-  host:
+    - patch               # [not win]
+    - m2-patch            # [win]
+host:
     - python
     - pip
+    - setuptools
+    - wheel
     - cython
     - proj
   run:
