--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,45 +16,43 @@ source:
 build:
   number: 0
   skip: true  # [py<38]
-  skip: true  # [win32] proj dependency isn't built for win32 right now.
+  script_env:
+    - PROJ_VERSION={{ proj }}
+  script:
+    - {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - pyproj=pyproj.__main__:main
-  script:
-    - export "PROJ_VERSION={{ proj }}"  # [unix]
-    - set "PROJ_VERSION={{ proj }}"     # [win]
-    - {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
   build:
     - {{ compiler('c') }}
   host:
     - python
+    - cython
     - pip
+    - proj >={{ proj_min }}
     - setuptools
     - wheel
-    - cython >=0.28.4
-    - proj >={{ proj_min }}
   run:
     - python
-    - proj >={{ proj_min }}
     - certifi
+    - proj >={{ proj_min }}
 
 test:
-  # NOTE to future maintainers: Reenable full testing when pandas is available for python 3.10.
   source_files:
     - test
   requires:
     - pytest
-    - shapely  # [(not osx or py<=39) and (not s390x)]
+    - shapely  # [not s390x]
     - numpy
-    - pandas  # [py<310 or osx]  Not available for python 3.10 right now for win or lin 64
-    - xarray  # [py<310 or osx] Depends on pandas
+    - pandas
+    - xarray
   imports:
     - pyproj
   commands:
     - pyproj --verbose
-    - pyproj --help  # [not(py<310 or osx)]  Remove after pandas is available.
-    - pytest -v -s   # [py<310 or osx]  Disable until pandas is available.
+    - pyproj --help
+    - pytest -v -s
 
 about:
   home: https://github.com/pyproj4/pyproj
@@ -62,11 +60,10 @@ about:
   license_family: MIT
   license_file: LICENSE
   summary: Python interface to PROJ library
+  description: |
+    Python interface to PROJ (cartographic projections and coordinate transformations library).
   dev_url: https://github.com/pyproj4/pyproj
-  #doc_url: https://pyproj4.github.io/pyproj/{{ version }}
-  #doc_src_url: https://github.com/pyproj4/pyproj/tree/{{ version }}/docs
-  doc_url: https://pyproj4.github.io/pyproj/
-  doc_src_url: https://github.com/pyproj4/pyproj/tree/main/docs
+  doc_url: https://pyproj4.github.io/pyproj/stable/
 
 extra:
   recipe-maintainers:
