Use proj 8.2.1 for host

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - python
     - cython
     - pip
-    - proj >={{ proj_min }}
+    - proj ={{ proj_min }}
     - setuptools
     - wheel
   run:
