--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - {{ compiler('c') }}
   host:
     - python
-    - cython
+    - cython =0.28.4
     - pip
     - proj ={{ proj_min }}
     - setuptools
